--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,33 @@
 version: 2.1
 orbs:
-  node: circleci/node@1.1.6
+    node: circleci/node@1.1.6
 jobs:
-  build-and-test:
-    executor:
-      name: node/default
-    steps:
-      - checkout
-      - node/with-cache:
-          steps:
-            - run: npm install
-            - run: npm test
+    build-and-test:
+        executor:
+            name: node/default
+        steps:
+            - checkout
+            - node/with-cache:
+                  steps:
+                      - run: npm install
+                      - run: npm test
+      deploy-prod:
+        docker:
+          - image: circleci/node:7.10
+        steps:
+          - checkout
+          - run: ssh -oStrictHostKeyChecking=no -v $DROPLET_USER@$DROPLET_IP -p $DROPLET_PORT “/home/admin/circleci/deploy_project.sh”
 workflows:
     build-and-test:
-      jobs:
-        - build-and-test
+        jobs:
+            - build-and-test
+    build-and-deploy:
+        jobs:
+          - build
+          - deploy-prod:
+            filters:
+              branches:
+                only:
+                  - master
+            requires:
+              - build
