--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           - image: circleci/node:7.10
         steps:
           - checkout
-          - run: ssh -oStrictHostKeyChecking=no -v $DROPLET_USER@$DROPLET_IP -p $DROPLET_PORT “/home/admin/circleci/deploy_project.sh”
+          - run: ssh -oStrictHostKeyChecking=no -v $DROPLET_USER@$DROPLET_IP -p $DROPLET_PORT "/home/admin/circleci/deploy_project.sh"
 workflows:
     build-and-test:
         jobs:
