--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,23 +11,17 @@ jobs:
                   steps:
                       - run: npm install
                       - run: npm test
-    deploy-prod:
-        docker:
-            - image: circleci/node:7.10
-        steps:
-            - checkout
-            - run: ssh -oStrictHostKeyChecking=no -v $DROPLET_USER@$DROPLET_IP -p $DROPLET_PORT "/home/admin/circleci/deploy_project.sh"
+    build-and-deploy:
+        deploy-prod:
+            docker:
+                - image: circleci/node:7.10
+            steps:
+                - checkout
+                - run: ssh -oStrictHostKeyChecking=no -v $DROPLET_USER@$DROPLET_IP -p $DROPLET_PORT "/home/admin/circleci/deploy_project.sh"
 workflows:
     build-and-test:
         jobs:
             - build-and-test
     build-and-deploy:
         jobs:
-            - build
-            - deploy-prod:
-              filters:
-                  branches:
-                      only:
-                          - master
-              requires:
-                  - build
+            - build-and-deploy
